Import of LBROCARD/Image-Imlib2-0.03 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      0.03
gitpan-cpan-path:         LBROCARD/Image-Imlib2-0.03.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::Imlib2.
 
+0.03  Sat Sep  7 10:00:06 BST 2002
+        - incorporate color ranges, polygons and updated docs
+	  thanks to Theo Schlossnagle
+	- better warning if imlib2 hasn't been installed
+
 0.02  Wed Aug 29 10:40:56 BST 2001
 	- mention that imlib2 is out. I intend to rewrite this with
 	  Inline::C to make it more maintainable
