Import of LBROCARD/Image-Imlib2-1.02 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      1.02
gitpan-cpan-path:         LBROCARD/Image-Imlib2-1.02.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Revision history for Perl extension Image::Imlib2.
 
+1.02 Tue May 25 22:18:32 BST 2004
+	- renamed Changes to CHANGES 
+	- new set_quality function (thanks to Andreas Plesner)
+
 1.01 Mon Nov  3 19:18:14 GMT 2003
 	- document get_width and get_height methods (thanks to Andreas
 	Plesner)
