Import of LBROCARD/Image-Imlib2-1.06 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      1.06
gitpan-cpan-path:         LBROCARD/Image-Imlib2-1.06.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl extension Image::Imlib2.
 
+1.06 Fri Apr  8 22:58:26 CST 2005
+    - added missing test file to MANIFEST
+
 1.05 Thu Apr  7 16:55:01 GMT 2005
     - added support for defeating caching, namely:
           set_cache_size
