--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl extension Image::Imlib2.
 
+1.07 Fri Apr 15 11:57:47 BST 2005
+	- Add clone, sharpen and blur (thanks to Christian Hansen)
+
 1.06 Fri Apr  8 22:58:26 CST 2005
     - added missing test file to MANIFEST
 
