Import of LBROCARD/Image-Imlib2-1.09 from CPAN.
gitpan-cpan-distribution: Image-Imlib2
gitpan-cpan-version:      1.09
gitpan-cpan-path:         LBROCARD/Image-Imlib2-1.09.tar.gz
gitpan-cpan-author:       LBROCARD
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Revision history for Perl extension Image::Imlib2.
 
+1.09 Thu Jun 15 16:43:10 GMT 2006
+    - lose AUTOLOAD and define the constants in their own right
+      code by Mark Fowler. this also means that random calls for
+      non-existant methods fail properly now
+
 1.08 Wed Mar  1 19:10:05 GMT 2006
     - fix build instructions (noticed by JPIERCE)
 
